<resources>
    <string name="app_name">WanoTubeApp</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="following">Following</string>
    <string name="shorts">Shorts</string>
    <string name="title_activity_watch">WatchActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="user_avatar">User\'s avatar</string>
    <string name="video_thumbnail">Video\'s thumbnail</string>
    <string name="comment_guidelines">Remember to keep comments respectful and to follow our Community Guidelines</string>
    <string name="comment_placeholder">Add a comment..</string>
    <string name="caption_placeholder">Describe your video</string>
    <string name="title_placeholder">Name your video title</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="username">Username</string>
    <string name="title">Title</string>
    <string name="default_time_code">00:10</string>
    <string name="next">Next</string>
    <string name="click_to_finish_this_step">Click to finish this step</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="create">Create</string>
    <string name="my_videos">My Videos</string>
    <string name="log_out">Log Out</string>
    <string name="your_description">Your description</string>
    <string name="description">Description</string>
    <string name="author_s_name">Author\'s name</string>
    <string name="author_s_followers">Author\'s followers</string>
    <string name="create_a_short">Create a Short</string>
    <string name="upload_a_video">Upload a video</string>
    <string name="edit_video">Edit video</string>
    <string name="delete_video">Delete video</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="video_s_title">Video\'s title</string>
    <string name="a_comment">A comment</string>
    <string name="comment_total_default">0</string>
    <string name="comments">Comments</string>
    <string name="like_total_default">0</string>
    <string name="save">Save</string>
    <string name="watch_history">Watch History</string>
    <string name="watch_later">Watch Later</string>
    <string name="my_followers">My Followers</string>
    <string name="my_followings">My Followings</string>
    <string name="follow">Follow</string>
    <string name="default_content">Default content</string>
    <string name="save_to_watch_later">Save to watch later</string>
    <string name="share">Share</string>
    <string name="remove_from_watch_later">Remove from Watch Later</string>
    <string name="followers">Followers</string>
    <string name="likes">Likes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="copyright_caption">The content identified in your video is listed below, along with details.</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="copyright_owners">Copyright owners</string>
    <string name="copyright_claim">COPYRIGHT CLAIM</string>
    <string name="copyright_claim_normal">Copyright Claim</string>
    <string name="close">CLOSE</string>
    <string name="blocked_status_title">Message</string>
    <string name="blocked_status_caption">Due to a copyright claim, you\'re blocked from uploading any video in a week.</string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
</resources>