<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_library">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:fillViewport="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_comments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </HorizontalScrollView>
    <View style="@style/Divider.Horizontal"/>
    <LinearLayout
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/watch_history"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <ImageView
                android:padding="8dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_short"
                android:background="@drawable/circle_shape"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_history"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"
                android:padding="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/watch_later"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <ImageView
                android:padding="8dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_short"
                android:background="@drawable/circle_shape"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_later"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"
                android:padding="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/my_videos"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <ImageView
                android:padding="8dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_short"
                android:background="@drawable/circle_shape"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_videos"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"
                android:padding="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/my_followers"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <ImageView
                android:padding="8dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_short"
                android:background="@drawable/circle_shape"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_followers"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"
                android:padding="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/my_followings"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp">

            <ImageView
                android:padding="8dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_short"
                android:background="@drawable/circle_shape"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_followings"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"
                android:padding="8dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>